syntax = "proto3";

option java_multiple_files = true;
option java_package = "pt.up.fc.dcc.ssd.a.kademlia";
option java_outer_classname = "KademliaProtocol";

import "type.proto";

service KademliaService{
	rpc FindNode(NodeIDM) returns (NodeM) {}
	rpc FindValue(ValueIDM) returns (NodeM) {}
	rpc Store(PackToStoreM) returns (NodeM) {}
	rpc Ping(Empty) returns (Empty) {}
}


message PackToStoreM{
	bytes key = 1;
	bytes value = 2;
	bytes myNodeID = 3;
}

/**
In all RPCs, the recipient must echo a 160-bit random RPC ID, which pro-
vides some resistance to address forgery. pings can also be piggy-backed on
RPC replies for the RPC recipient to obtain additional assurance of the senderâ€™s
network address.
*/

message NodeIDM{
	bytes nodeID = 1;
	bytes myNodeID = 2;
}

message ValueIDM{
	bytes valueID = 1;
	bytes myNodeID = 2;
}

message NodeM{
	fixed32 ipv4 = 1;
	uint32 port = 2;
	bytes nodeID = 3;

}